<resources>
    <string name="app_name">Assisto</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Username or Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_network_error">Oops! Something went wrong try again.</string>
    <string name="click_register"><a href="https://www.techassisto.com/register">Not registered? Click Here To Login</a> </string>

    <!--Navigation bar-->
    <string name="nav_hello_msg">Hello </string>


    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="action_update_and_print">Update and Print</string>
    <string name="action_save_and_print">Save and Print</string>
    <string name="action_add_printer">Add Printer</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <string name="scan_product_button">Scan Barcode</string>
    <string name="scan_button_invoice">Scan Invoice Barcode</string>

    <!--++ Vendor ++-->
    <!--++ form ++-->
    <string name="prompt_vendor_name">Vendor Name</string>
    <string name="prompt_vendor_id">Short Name/ID of vendor</string>
    <string name="prompt_vendor_addr1">Address Line 1 </string>
    <string name="prompt_vendor_addr2">Address Line 2</string>
    <string name="prompt_vendor_state">State</string>
    <string name="prompt_vendor_city">City/Town</string>
    <string name="prompt_vendor_pincode">Pincode</string>
    <string name="prompt_vendor_contact">Contact No.</string>
    <string name="prompt_vendor_cst">CST Number</string>
    <string name="prompt_vendor_tin">TIN Number</string>
    <string name="prompt_vendor_gst">GST Number</string>
    <string name="prompt_vendor_remarks">Remarks</string>
    <string name="submit">Submit</string>
    <!--++ form ++ -->
    <!--++ Vendor ++-->

    <!-- ++ Purchase ++ -->

    <string name="prompt_purchase_price">Purchase Rate</string>
    <string name="prompt_tsp">Tentative Sales Rate</string>
    <string name="prompt_mrp">MRP</string>
    <string name="prompt_receipt_details">Add Receipt Details</string>
    <string name="prompt_receipt_date">Select Date</string>
    <string name="prompt_receipt_vendor_invoice">Vendor Invoice No</string>

    <!--++ Retail Sales ++-->
    <string name="retail_dashboard">Retail Dashboard</string>
    <string name="create_sales_invoice_button">Create Sales Invoice</string>
    <string name="create_sales_return_button">Create Sales Return</string>
    <string name="view_latest_invoices">View Latest Invoices</string>
    <string name="product_rates">Rates</string>
    <string name="total_sales_graph">Total Sales in the last 5 Days</string>
    <string name="download_reports">Download Reports</string>
    <string name="download_eod_productwise_report">Download EOD Productwise Reports</string>
    <string name="prompt_product_return_quantity">Quantity Returned</string>

    <!--++ Retail Sales Invoice View++-->
    <string name="search_invoice">Enter Invoice No</string>
    <string name="search_button">Search</string>
    <string name="view_invoice_no">Invoice No</string>
    <string name="view_invoice_date">Date</string>
    <string name="view_invoice_cgst">CGST</string>
    <string name="view_invoice_sgst">SGST</string>
    <string name="view_invoice_gst">GST</string>
    <string name="view_invoice_round">Round Off</string>
    <string name="view_invoice_total">Total</string>

    <!-- ++ Common Values ++-->
    <string name="prompt_add_product">Enter Product Name</string>
    <string name="amount_paid_customer">Amount Paid by Customer</string>

    <!--++ Add Vendor Form ++-->
    <string name="retail_payment_mode">Payment Mode</string>
    <string name="prompt_product_name">Product Name</string>
    <string name="prompt_product_id">Product Id</string>
    <string name="prompt_product_unit">Unit</string>
    <string name="prompt_product_rate">Rate</string>
    <string name="prompt_product_cgst">CGST</string>
    <string name="prompt_product_sgst">SGST</string>
    <string name="prompt_product_custom_rate">Custom Rate</string>
    <string name="prompt_add_custom_rate">Add Custom Rate?</string>
    <string name="prompt_custom_istax">Is Tax included ?</string>
    <string name="prompt_product_quantity">Quantity</string>
    <!--++ Add Vendor Form ++-->

    <!--++ Product Related ++-->

    <string-array name="product_identifier_array">
        <item>Identify By Name</item>
        <item>Identify By SKU</item>
        <item>Identify By Barcode</item>
    </string-array>

    <!--EPSON-->
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>

    <string name="btn_refresh">Refresh</string>
    <string name="printer_list">Select one of the available printers:</string>

    <string name="title_target">Target</string>

    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <!--EPSON-->
</resources>
