<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_update_pay_mode"
        android:orderInCategory="100"
        android:title="Update Payment Mode"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_add_printer"
        android:orderInCategory="100"
        android:title="@string/action_add_printer"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_print"
        android:orderInCategory="100"
        android:title="Print"
        app:showAsAction="collapseActionView" />
</menu>