<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <!--tools:context="com.techassisto.mrinmoy.assisto.invoiceList.InvoiceActivity">-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_marginTop="100dp">

        <!-- API Get Request Progress to be displayed -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="100dp"
            android:orientation="vertical">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/apiget_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="48dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_invoice"
                    android:textSize="12.5sp"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:hint="@string/search_invoice"/>
                <Button
                    android:id="@+id/search_button"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:text="@string/search_button"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:backgroundTint="@color/lightBlueSemiTransparentButton"
                    android:alpha="0.75"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/scan_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_barcode_scan"
                    android:backgroundTint="@color/lightBlueSemiTransparentButton"
                    android:text="@string/scan_button_invoice"
                    android:textStyle="italic" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="48dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:id="@+id/return_details_layout"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/return_total"
                    android:hint="Return Total"
                    android:textSize="15sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColorHint="@color/textColorDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/return_round_off"
                    android:hint="Round Off"
                    android:textSize="15sp"
                    android:textColorHint="@color/textColorDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/invoice_no"
                    android:hint="@string/view_invoice_no"
                    android:textSize="12.5sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColorHint="@color/textColorDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/date"
                    android:hint="@string/view_invoice_date"
                    android:textSize="12.5sp"
                    android:textColorHint="@color/textColorDark"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/billtotal"
                    android:hint="@string/view_invoice_total"
                    android:textSize="12.5sp"
                    android:textColorHint="@color/textColorDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/cgst"
                    android:hint="@string/view_invoice_cgst"
                    android:textSize="12.5sp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/textColorDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/sgst"
                    android:hint="@string/view_invoice_sgst"
                    android:textSize="12.5sp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/textColorDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billround"
                    android:hint="@string/view_invoice_round"
                    android:textSize="12.5sp"
                    android:textColorHint="@color/textColorDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_name"
                    android:textSize="12.5sp"
                    android:textColorHint="@color/textColorDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/quantity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_quantity"
                    android:textColorHint="@color/textColorDark"
                    android:textSize="12.5sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/rate_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_rate"
                    android:textSize="12.5sp"
                    android:textColorHint="@color/textColorDark"
                    android:id="@+id/rate_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cgst_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_return_quantity"
                    android:textColorHint="@color/textColorDark"
                    android:textSize="12.5sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/sgst_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/view_invoice_gst"
                    android:textColorHint="@color/textColorDark"
                    android:textSize="12.5sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/total_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/view_invoice_total"
                    android:textColorHint="@color/textColorDark"
                    android:textSize="12.5sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <ListView
                android:id="@+id/retailinvoicedetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/app_bar_dash_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_dash_board"
        app:menu="@menu/activity_dash_board_drawer" />

</android.support.v4.widget.DrawerLayout>